force-app/main/default/objects/zkups__CustomAddressSource__c/zkups__CustomAddressSource__c.object-meta.xml
<CustomObject>
    <customHelpPage>zkups__customAddressSourceHelp</customHelpPage>
    <description>UPS Custom Address Source stores the object and field mapping data allowing any standard or custom object to be used as a shipping data source</description>
    <label>UPS Custom Address Source</label>
    <nameField>
        <label>Custom Address Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UPS Custom Address Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>