force-app/main/default/objects/zkups__CustomAddressSource__c/fields/zkups__BillDutiesTaxCountryField__c.field-meta.xml
<CustomField>
    <fullName>zkups__BillDutiesTaxCountryField__c</fullName>
    <label>Bill Duties Tax Country Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>