force-app/main/default/objects/zkups__CustomAddressSource__c/fields/zkups__CollectOnDeliveryAmountField__c.field-meta.xml
<CustomField>
    <fullName>zkups__CollectOnDeliveryAmountField__c</fullName>
    <label>Collect on Delivery Amount Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>