force-app/main/default/objects/zkups__CustomAddressSource__c/fields/zkups__CompanyNameField__c.field-meta.xml
<CustomField>
    <fullName>zkups__CompanyNameField__c</fullName>
    <label>Company Name Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>