force-app/main/default/objects/zkups__CustomAddressSource__c/fields/zkups__EmailRecipient3Field__c.field-meta.xml
<CustomField>
    <fullName>zkups__EmailRecipient3Field__c</fullName>
    <label>Email Recipient 3 Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>