force-app/main/default/objects/zkups__CustomAddressSource__c/fields/zkups__OutputRetNegTotalChargesField__c.field-meta.xml
<CustomField>
    <fullName>zkups__OutputRetNegTotalChargesField__c</fullName>
    <label>Output Ret Neg Total Charges Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>