force-app/main/default/objects/zkups__CustomAddressSource__c/fields/zkups__OutputRetScheduledDeliveryTimeField__c.field-meta.xml
<CustomField>
    <fullName>zkups__OutputRetScheduledDeliveryTimeField__c</fullName>
    <label>Output Ret Scheduled Delivery Time Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>