force-app/main/default/objects/zkups__CustomAddressSource__c/fields/zkups__ReturnDescriptionField__c.field-meta.xml
<CustomField>
    <fullName>zkups__ReturnDescriptionField__c</fullName>
    <label>Return Description Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>