force-app/main/default/objects/zkups__CustomAddressSource__c/fields/zkups__SecondReferenceTypeDefault__c.field-meta.xml
<CustomField>
    <fullName>zkups__SecondReferenceTypeDefault__c</fullName>
    <label>Second Reference Type Default</label>
    <length>50</length>
    <type>Text</type>
</CustomField>