force-app/main/default/objects/zkups__CustomAddressSource__c/fields/zkups__Street2TextLineField__c.field-meta.xml
<CustomField>
    <fullName>zkups__Street2TextLineField__c</fullName>
    <label>Street 2 Text Line Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>